examples/bounded-types/compile_fail/undefined_type_reference.stderr
error: proc macro panicked
  --> compile_fail/undefined_type_reference.rs:6:13
   |
 6 |       let _ = m!(
   |  _____________^
 7 | |         struct Sensor {
 8 | |             reading: int[0, NonExistent.len()]
...  |
11 | |     )
   | |_____^
   |
   = help: message: marigold parsing error: MarigoldParseError("Bounded type validation failed:\n  - Undefined type: 'NonExistent'")

error[E0282]: type annotations needed
  --> compile_fail/undefined_type_reference.rs:6:13
   |
 6 |       let _ = m!(
   |  _____________^
 7 | |         struct Sensor {
 8 | |             reading: int[0, NonExistent.len()]
...  |
12 | |     .await
   | |__________^ cannot infer type
